# justwatch-scrapy

./: README.md  docker-compose.yml  init.sql  load_git.bat  pyproject.toml
src/dashboard/: DockerFile  app.py  requirements.txt
src/extract/: DockerFile  requirements.txt  teste.json
src/extract/extract/: middlewares.py  pipelines.py  settings.py
src/extract/extract/spiders/: streaming_service.py  streaming_service_api.py
